--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -1,10 +1,13 @@
-categories: 分类
+reprint: 转载请注明
+curr: 本篇
+prev: 上一篇
+next: 下一篇
 search: 搜索
+searchTip: 请输入搜索的关键字
+categories: 分类
 tags: 标签
 tagcloud: 标签云
 tweets: 推文
-prev: 上一页
-next: 下一页
 comment: 留言
 archive_a: 归档
 archive_b: 归档：%s
