主题各个细节点的优化

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -6,3 +6,4 @@ search: Search
 searchTip: Please enter a search keyword
 postTagTitle: Post Tags
 postCategoryTitle: Post Categories
+categoryEmptyTip: Your posts has no categories information yet.
