新增了“关于我”页面中“我的技能”的内容

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -12,4 +12,5 @@ postCategoryTitle: Post Categories
 categoryRadarTitle: Post Categories Radar Chart
 categoryNumber: Number of Categories
 categoryEmptyTip: Your posts has no categories information yet.
-myprojects: My Projects
+myProjects: My Projects
+mySkills: My Skills
