--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -12,4 +12,5 @@ postCategoryTitle: 文章分类
 categoryRadarTitle: 文章分类雷达图
 categoryNumber: 文章分类数量
 categoryEmptyTip: 你目前还没有对文章进行分类.
-myprojects: 我的项目
+myProjects: 我的项目
+mySkills: 我的技能
