新增“关于我”页面的“其他技能”内容

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -14,3 +14,4 @@ categoryNumber: Number of Categories
 categoryEmptyTip: Your posts has no categories information yet.
 myProjects: My Projects
 mySkills: My Skills
+otherSkills: Other Skills
