--- a/languages/default.yml
+++ b/languages/default.yml
@@ -15,3 +15,4 @@ categoryEmptyTip: Your posts has no categories information yet.
 myProjects: My Projects
 mySkills: My Skills
 otherSkills: Other Skills
+gallery: Gallery
