新增“关于”页面中文章相关“统计图”的示例内容

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -12,6 +12,7 @@ postCategoryTitle: Post Categories
 categoryRadarTitle: Post Categories Radar Chart
 categoryNumber: Number of Categories
 categoryEmptyTip: Your posts has no categories information yet.
+postCharts: Post Charts
 myProjects: My Projects
 mySkills: My Skills
 otherSkills: Other Skills
