新增读取文章分类统计图的内容

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -13,8 +13,9 @@ categoryRadarTitle: Post Categories Radar Chart
 categoryNumber: Number of Categories
 categoryEmptyTip: Your posts has no categories information yet.
 postCharts: Post Charts
-postsNumberName: Number of posts
 postPublishChart: Post Publish Chart
+categoriesChart: Categories Chart
+postsNumberName: Number of posts
 maximum: Maximum
 minimum: Minimum
 average: Average
