--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -15,6 +15,7 @@ categoryEmptyTip: 你目前还没有对文章进行分类.
 postCharts: 文章统计图
 postPublishChart: 文章发布统计图
 categoriesChart: 文章分类统计图
+top10TagsChart: TOP10 标签统计图
 postsNumberName: 文章篇数
 maximum: 最大值
 minimum: 最小值
