--- a/languages/default.yml
+++ b/languages/default.yml
@@ -16,7 +16,6 @@ readTimes: Read Times
 Minutes: Min
 readMore: Read more
 toc: TOC
-reprint: Reprint policy
 curr: Current
 prev: Previous
 next: Next
@@ -39,26 +38,25 @@ myProjects: My Projects
 mySkills: My Skills
 otherSkills: Other Skills
 gallery: Gallery
+notag: No tag
 from: From
+reprint: Reprint policy
 author: Author
 link: Link
-notag: No tag
-cc: Creative Commons License
-by: by
-under: is licensed under a
-licensed: " "
-cc_by_url: https://creativecommons.org/licenses/by/4.0/
-cc_by_name: Creative Commons Attribution 4.0 International License
-cc_by_nd_url: https://creativecommons.org/licenses/by-nd/4.0/
-cc_by_nd_name: Creative Commons Attribution-NoDerivatives 4.0 International License
-cc_by_sa_url: https://creativecommons.org/licenses/by-sa/4.0/
-cc_by_sa_name: Creative Commons Attribution-ShareAlike 4.0 International License
-cc_by_nc_url: https://creativecommons.org/licenses/by-nc/4.0/
-cc_by_nc_name: c
-cc_by_nc_nd_url: http://creativecommons.org/licenses/by-nc-nd/4.0/
-cc_by_nc_nd_name: Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License
-cc_by_nc_sa_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-cc_by_nc_sa_name: Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License
+use: All articles in this blog are used except for special statements
+licensed: reprint polocy. If reproduced, please indicate source
+cc_by_url: https://creativecommons.org/licenses/by/4.0/deed.zh
+cc_by_name: CC BY 4.0
+cc_by_nd_url: https://creativecommons.org/licenses/by-nd/4.0/deed.zh
+cc_by_nd_name: CC BY-ND 4.0
+cc_by_sa_url: https://creativecommons.org/licenses/by-sa/4.0/deed.zh
+cc_by_sa_name: CC BY-SA 4.0
+cc_by_nc_url: https://creativecommons.org/licenses/by-nc/4.0/deed.zh
+cc_by_nc_name: CC BY-NC 4.0
+cc_by_nc_nd_url: https://creativecommons.org/licenses/by-nc-nd/4.0/deed.zh
+cc_by_nc_nd_name: CC BY-NC-ND 4.0
+cc_by_nc_sa_url: https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh
+cc_by_nc_sa_name: CC BY-NC-SA 4.0
 cc_0_url: https://creativecommons.org/publicdomain/zero/1.0/
 toTheExtentPossibleUnderLaw: To the extent possible under law,
 hasWaivedAllCopyrightAndRelatedOrNeighboringRightsTo: has waived all copyright and related or neighboring rights to
