--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -64,6 +64,7 @@ workPublishedFrom: 。此作品发布在：
 cc_0_country: 中国大陆。
 cc_0_content: CN
 noreprint: 本文不允许转载。
-payreprint: 请联系作者付费转载。
+paycontact: 请联系作者
+payreprint: 付费转载。
 pleaseFollowReprintPolicy: 复制成功，请遵循本文的转载规则
 checkPolicy: 查看
