--- a/languages/default.yml
+++ b/languages/default.yml
@@ -10,6 +10,7 @@ friends: Friends
 startRead: Start
 recommendedPosts: Recommended Posts
 publishDate: Publish Date
+updateDate: Update Date
 readCount: Read Count
 wordCount: Word Count
 readTimes: Read Times
