--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -10,7 +10,7 @@ friends: 友情链接
 startRead: 开始阅读
 recommendedPosts: 推荐文章
 publishDate: 发布日期
-updatehDate: 更新日期
+updateDate: 更新日期
 readCount: 阅读次数
 wordCount: 文章字数
 readTimes: 阅读时长
