--- a/languages/default.yml
+++ b/languages/default.yml
@@ -45,7 +45,7 @@ reprint: Reprint policy
 author: Author
 link: Link
 use: All articles in this blog are used except for special statements
-licensed: reprint polocy. If reproduced, please indicate source
+licensed: reprint policy. If reproduced, please indicate source
 cc_by_url: https://creativecommons.org/licenses/by/4.0/deed.zh
 cc_by_name: CC BY 4.0
 cc_by_nd_url: https://creativecommons.org/licenses/by-nd/4.0/deed.zh
