重构 footer.ejs 的文件使其可以支持国际化

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -69,3 +69,6 @@ paycontact: Please contact the author
 payreprint: to pay for reprinting.
 pleaseFollowReprintPolicy: Copied successfully, please follow the reprint policy of this article
 checkPolicy: more
+siteTotalWords: Total Words
+siteTotalVisits: Total visits
+siteTotalVisitors: Total visitors
