--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -72,3 +72,10 @@ checkPolicy: 查看
 siteTotalWords: 站点总字数
 siteTotalVisits: 总访问量
 siteTotalVisitors: 总访问人数
+Index: 首页
+Tags: 标签
+Categories: 分类
+Archives: 归档
+About: 关于
+Contact: 留言板
+Friends: 友情链接
